fixed vertical alignment

--- a/src/sass/stylesheet.scss
+++ b/src/sass/stylesheet.scss
@@ -1,18 +1,26 @@
 $header-font-color: hsl(234, 12%, 34%);
 
+html {
+    height: 100vh;
+}
+
 body {
     color: hsl(229, 6%, 66%);
     font-family: "Poppins", sans-serif;
     font-size: 15px;
 
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
     background-color: hsl(0, 0%, 98%);
 
+    .main-container {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     header {
+        margin-top: 10rem;
         text-align: center;
         width: 300px;
 
@@ -96,6 +104,7 @@ body {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            gap: 2rem;
             width: 1050px;
             align-items: center;
 
